--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "dependencies": {
     "request": "~2.65.0",
     "xml-to-json": "~0.1.1",
-    "mocha": "~2.3.3"
+    "mocha": "~2.3.3",
+    "jsonfile": "~2.2.3",
+    "should": "~7.1.1",
+    "clear-require": "~1.0.1"
   }
 }
