--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "index.js",
-  "version": "0.0.0",
-  "description": "NIST 800-53 Security Control Assessment Test Suite",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha test/test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hortinstein/NISTonomicon.git"
-  },
-  "keywords": [
-    "NIST",
-    "800-53",
-    "security",
-    "controls",
-    "fedramp"
-  ],
-  "author": "hortinstein",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hortinstein/NISTonomicon/issues"
-  },
-  "homepage": "https://github.com/hortinstein/NISTonomicon",
-  "dependencies": {
-    "request": "~2.65.0",
-    "xml-to-json": "~0.1.1",
-    "mocha": "~2.3.3",
-    "jsonfile": "~2.2.3",
-    "should": "~7.1.1",
-    "clear-require": "~1.0.1",
-    "mockery": "~1.4.0"
-  }
+    "name": "index.js",
+    "version": "0.0.0",
+    "description": "NIST 800-53 Security Control Assessment Test Suite",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha test/test.js",
+        "watch": "npm-watch"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hortinstein/NISTonomicon.git"
+    },
+    "keywords": ["NIST", "800-53", "security", "controls", "fedramp"],
+    "author": "hortinstein",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/hortinstein/NISTonomicon/issues"
+    },
+    "watch": {
+        "test": ""
+    },
+    "homepage": "https://github.com/hortinstein/NISTonomicon",
+    "dependencies": {
+        "request": "~2.65.0",
+        "xml-to-json": "~0.1.1",
+        "mocha": "~2.3.3",
+        "jsonfile": "~2.2.3"
+    },
+    "devDependencies": {
+        "npm-watch": "0.0.1",
+        "should": "~7.1.1"
+    }
 }
