--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "devDependencies": {
         "npm-watch": "0.0.1",
-        "should": "~7.1.1"
+        "should": "~7.1.1",
+        "nistonomicon-ntp": "git+https://github.com/NISTonomicon/NISTonomicon-inherit-example-ntp.git"
     }
 }
